--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
         "laravel/ui": "^3.0",
         "paragonie/random_compat": "^9.99"
     },
+    "post-install-cmd": [
+         "php artisan clear-compiled",
+         "chmod -R 777 public/"
+     ],
     "require-dev": {
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
